add getAllConcs